structured the folders

--- a/project/model_trainig.ipynb
+++ b/project/model_trainig.ipynb
@@ -1209,6 +1209,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ae2467d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LassoCV\n",
+    "lassocv=LassoCV()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c83b0fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "id": "6d1dbaf3",
    "metadata": {},
