--- a/project/model_trainig.ipynb
+++ b/project/model_trainig.ipynb
@@ -1855,23 +1855,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "id": "08014272",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.1, 1.0, 10.0)"
+       "np.float64(1.0)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ridgecv.alphas"
+    "ridgecv.alpha_"
    ]
   },
   {
